@@ -3,8 +3,11 @@ Changelog
 
 4.8-dev - (unreleased)
 ----------------------
-* Bugfix: return only resources through getHeader avoiding extra unneeded tags 
-  and metadata
+* Change: removed site related logic from getHeader since it was deprecated 
+  logic
+  [ichimdav #14567]
+* Bugfix: return only resources through getRequiredHead avoiding extra unneeded 
+  tags and metadata
   [ichimdav #14567]
 
 4.7 - (2013-04-17)
